--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@ https://templatemo.com/tm-530-mini-profile
             <div class="ml-auto mr-0 tm-bg-black-transparent text-white tm-brand-container-inner">
               <div class="tm-brand-container text-center">
                 <h1 class="tm-brand-name">Git and Github Overview</h1>
-                <p class="tm-brand-description mb-0">simple parallax template</p>
+                <p class="tm-brand-description mb-0">Git is a free and open-source distributed version control system for tracking changes in source code and is used for software development</p>
+                <p class="tm-brand-description mb-0">GitHub is a Git repository hosting service,GitHub provides a Web-based graphical interface, access control and several collaboration features</p>
               </div>
             </div>
           </div>
