--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ https://templatemo.com/tm-530-mini-profile
             <div class="ml-auto mr-0 tm-bg-black-transparent text-white tm-brand-container-inner">
               <div class="tm-brand-container text-center">
                 <h1 class="tm-brand-name">Git and Github Overview</h1>
-                <p class="tm-brand-description mb-0">Git is a free and open-source distributed version control system for tracking changes in source code and is used for software development</p>
-                <p class="tm-brand-description mb-0">GitHub is a Git repository hosting service,GitHub provides a Web-based graphical interface, access control and several collaboration features</p>
+                <p class="tm-brand-description mb-0">Git is a free and open-source distributed version control system for tracking changes in source code and is used for software development.</p>
+                <p class="tm-brand-description mb-0">GitHub is a Git repository hosting service. It provides a Web-based graphical interface, access control and several collaboration features.</p>
               </div>
             </div>
           </div>
@@ -41,12 +41,9 @@ https://templatemo.com/tm-530-mini-profile
             <!-- White transparent bg -->
             <div class="col-md-7 tm-welcome-left-col">
               <div class="tm-welcome-left">
-                <h2 class="tm-welcome-title">Welcome to Mini Profile Page</h2>
+                <h2 class="tm-welcome-title"> How to install Git and Github</h2>
                 <p class="pb-0">
-                  This is Bootstrap v4.3.1 parallax layout for you. Credit goes to <a rel="nofollow" href="https://www.pexels.com">Pexels</a> for 2 background images. In
-                  odio sapien, commodo id ullamcorper ac, dignissim at sapien.
-                  Nullam leo massa, vaius ac massa et, tincidunt imperdiet
-                turpis. </p>
+                To use Git on the command line, you'll need to download, install, and configure Git on your computer. Git can be downloaded through <a rel="nofollow" href="https://git-scm.com/downloads">Git</a>.After download, run the setup to install Git</p>
               </div>
             </div>
             <!-- Brown bg -->
