--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/templatemo-style.css" />
-    <title>Mini Profile - Free Bootstrap CSS Template</title>
+    <title>Git and Github Overview - From lieuhuynhkhang</title>
     
 <!--
 Mini Profile Template
@@ -44,6 +44,8 @@ https://templatemo.com/tm-530-mini-profile
                 <h2 class="tm-welcome-title"> How to install Git and Github</h2>
                 <p class="pb-0">
                 To use Git on the command line, you'll need to download, install, and configure Git on your computer. Git can be downloaded through <a rel="nofollow" href="https://git-scm.com/downloads">Git</a>.After download, run the setup to install Git</p>
+                <p class="pb-0">
+                You can install GitHub CLI to use GitHub from the command line <a rel="nofollow" href="https://cli.github.com/manual/">GithubCLI</a>. You can also use the <a rel="nofollow" href="https://desktop.github.com/">Github Desktop</a> to work with Github locally and without using command lines </p>
               </div>
             </div>
             <!-- Brown bg -->
