--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ https://templatemo.com/tm-530-mini-profile
               <div class="tm-brand-container text-center">
                 <h1 class="tm-brand-name">Git and Github Overview</h1>
                 <p class="tm-brand-description mb-0">Git is a free and open-source distributed version control system for tracking changes in source code and is used for software development.</p>
-                <p class="tm-brand-description mb-0">GitHub is a Git repository hosting service. It provides a Web-based graphical interface, access control and several collaboration features.</p>
+                <p class="tm-brand-description mb-0">GitHub is a Git repository hosting service. It provides a Web-based graphical interface, access control and collaboration features.</p>
               </div>
             </div>
           </div>
@@ -53,7 +53,7 @@ https://templatemo.com/tm-530-mini-profile
               <div class="tm-welcome-right">
                 <i class="fas fa-4x fa-address-card p-3 tm-welcome-icon"></i>
                 <p class="mb-0">
-                  To start working with Git, you need to set your identity (username and email). Then create a repository on Github. Then clone that repository into your local device. After finishing working on the clone repo, push the changes made locally online to the Github repository. Detail commands for this process will be explain below
+                  To start working with Git, you need to set your identity (username and email). Then create a repository on Github. Then clone that repository into your local device. After finishing working on the clone repo, push the changes made locally online to the Github repository. Detail commands for this process will be explained below
                 </p>
               </div>
             </div>
@@ -70,17 +70,16 @@ https://templatemo.com/tm-530-mini-profile
           <div class="col-12">
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-green">
-                Project Manager
+                Set identity
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-green">
-                  New Company
-                  <span class="tm-title-small">(2019 January to Present)</span>
+                  Git config commands
+                  <span class="tm-title-small">(username and email)</span>
                 </h3>
                 <p class="mb-0">
-                  Nullam a tellus ultricies, ornare purus vel, porttitor massa.
-                  Aliquam facilisis purus ac eros sollicidudin, in mollis neque
-                  facilisis. Duis malesuada, mi non elementum malesuada.
+                  Enters [$git config --global user.name "username"] to set username
+                  Enters [$git config --global user.email "email"] to set user email
                 </p>
               </div>
             </div>
