--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ https://templatemo.com/tm-530-mini-profile
               <div class="tm-welcome-right">
                 <i class="fas fa-4x fa-address-card p-3 tm-welcome-icon"></i>
                 <p class="mb-0">
-                  To start working with Git, you need to set your identity (username and email). Then create a repository on Github. Then clone that repository into your local device. After finishing working on the clone repo, push the changes made locally online to the Github repository. Detail commands for this process will be explained below
+                  You need to set your identity (username and email). Then create a repository on Github. Clone that repository into your local device. Finally, push the changes made locally online to the Github repository after working. Detail commands are below.
                 </p>
               </div>
             </div>
@@ -79,6 +79,8 @@ https://templatemo.com/tm-530-mini-profile
                 </h3>
                 <p class="mb-0">
                   Enters [$git config --global user.name "username"] to set username
+                </p>
+                <p class="mb-0">
                   Enters [$git config --global user.email "email"] to set user email
                 </p>
               </div>
