--- a/index.html
+++ b/index.html
@@ -78,65 +78,52 @@ https://templatemo.com/tm-530-mini-profile
                   <span class="tm-title-small">(username and email)</span>
                 </h3>
                 <p class="mb-0">
-                  Enters [$git config --global user.name "username"] to set username
+                  [$git config --global user.name "username"] then click enter to set username
                 </p>
                 <p class="mb-0">
-                  Enters [$git config --global user.email "email"] to set user email
+                  [$git config --global user.email "email"] then click enter to set user email
                 </p>
               </div>
             </div>
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-orange">
-                Senior UX Designer
+                Acknowledging changes made
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-orange">
-                  Studio One
-                  <span class="tm-title-small">(2017 April to 2018 Dec)</span>
+                  Git add command
                 </h3>
                 <p class="mb-0">
-                  Phasellus ac nulla egestas, malesuada dolor quis, scelerisque
-                  arcu. Morbi aliquam, nunc vel blandit mattis, sapien nisl
-                  convallis sem, quis hendrerit nisl tellus in lectus. Proin at
-                  nibh bibendum, tincidunt mauris sit amet, porta risus. Integer
-                  id malesuada ligula.
+                  [$git add .] and click enter
                 </p>
               </div>
             </div>
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-blue">
-                Graphic Designer
+                Committing changes made
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-blue">
-                  Digital Com
-                  <span class="tm-title-small">(2015 Jan to 2016 Dec)</span>
+                  Git commit command
                 </h3>
                 <p class="mb-0">
-                  Etiam porta est nisl, consectetur dapibus ante faucibus id.
-                  Nunc ullamcorper a quam eget tincidunt. Proin vehicula mauris
-                  ipsum, euismod dignissim dolor convallis ac.
+                  [$git commit -m "message"] then click enter
                 </p>
               </div>
             </div>
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-dark-gray">
-                Design School
+                Pushing changes made to online repo
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-dark-gray">
-                  Art Design College
-                  <span class="tm-title-small">
-                    (2012 May to 2014 Dec)
-                  </span>
+                  Git push command
                 </h3>
                 <p class="mb-0">
-                  Etiam porta est nisl, consectetur dapibus ante faucibus id.
-                  Nunc ullamcorper a quam eget tincidunt. Proin vehicula mauris
-                  ipsum, euismod dignissim dolor convallis ac.
+                  [$git push] then click enter
                 </p>
               </div>
             </div>
