--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ https://templatemo.com/tm-530-mini-profile
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-dark-gray">
-                Pushing changes made to online repo
+                Pushing changes made online
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-dark-gray">
