--- a/index.html
+++ b/index.html
@@ -88,25 +88,25 @@ https://templatemo.com/tm-530-mini-profile
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-orange">
-                Acknowledging changes made
+                Pushing changes online
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-orange">
-                  Git add command
+                  Git add, commit and push command
                 </h3>
                 <p class="mb-0">
-                  [$git add .] and click enter
+                  [$git add .], enters then type [$git commit -m 'message']. After the command runs, the status of changes made will be shown. Finally, type [$git push] and enters to lock in the changes made into the online repository
                 </p>
               </div>
             </div>
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-blue">
-                Committing changes made
+               Resolving conflict
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-blue">
-                  Git commit command
+                  Git pull command
                 </h3>
                 <p class="mb-0">
                   [$git commit -m "message"] then click enter
