--- a/index.html
+++ b/index.html
@@ -107,9 +107,10 @@ https://templatemo.com/tm-530-mini-profile
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-blue">
                   Git pull command
+                  <span class="tm-title-small">(git fetch and git merge)</span>
                 </h3>
                 <p class="mb-0">
-                  [$git commit -m "message"] then click enter
+                  Conflict happens when competing changes are made to the same line/ file. To solve, the you must decide what to do with the changes (keep both, delete yours/other's ..). The git pull command is a combination of git fetch and git merge. Type [$git pull] and enters. First the remote repository will be downloaded to your local one (git fetch), then the conflict will be dectected and you will have choices on which changes to keep, after your selection your repo will be the same as the remote according to your choice (git merge) 
                 </p>
               </div>
             </div>
