--- a/index.html
+++ b/index.html
@@ -110,21 +110,21 @@ https://templatemo.com/tm-530-mini-profile
                   <span class="tm-title-small">(git fetch and git merge)</span>
                 </h3>
                 <p class="mb-0">
-                  Conflict happens when competing changes are made to the same line/ file. To solve, the you must decide what to do with the changes (keep both, delete yours/other's ..). The git pull command is a combination of git fetch and git merge. Type [$git pull] and enters. First the remote repository will be downloaded to your local one (git fetch), then the conflict will be dectected and you will have choices on which changes to keep, after your selection your repo will be the same as the remote according to your choice (git merge) 
+                  Conflict happens when competing changes are made to the same line/ file. To solve, you must decide what to do with the changes (keep both, delete yours/other's ..). The git pull command is a combination of git fetch and git merge. Type [$git pull] and enters. First the remote repository will be downloaded to your local one (git fetch), then the conflict will be dectected and you will have choices on which changes to keep, after your selection your repo will be the same as the remote according to your choice (git merge) 
                 </p>
               </div>
             </div>
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-dark-gray">
-                Pushing changes made online
+                Branching 
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-dark-gray">
-                  Git push command
+                  Git branch command
                 </h3>
                 <p class="mb-0">
-                  [$git push] then click enter
+                  branches are indentical copies of the source code. When you want to add a new change, work on a branch instead of the source will ensure safety for the original files if something goes wrong, it also make things cleaner and easier collaboration. type [$git branch "branch name"] to create a branch, [$git checkout "branch name"] to navigate between branches or come back to the source files.
                 </p>
               </div>
             </div>
